[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
prost = "0.12.3"
tonic-build = "0.10.2"

[build-dependencies]

